--- a/systemjs-ngc-rollup/index.html
+++ b/systemjs-ngc-rollup/index.html
@@ -11,7 +11,7 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="systemjs.config.js"></script>
     <script>
-         System.import('app/main').catch(function(err){ console.error(err); });
+         System.import('src/main').catch(function(err){ console.error(err); });
     </script>
 </head>
 
