--- a/es5/index.html
+++ b/es5/index.html
@@ -13,6 +13,16 @@
     <script src="https://unpkg.com/@angular/platform-browser-dynamic@4.0.1/bundles/platform-browser-dynamic.umd.js"></script>
 </head>
 <body>
+    <div>
+        core-js
+        zone.js
+        rxjs
+        @angular/core
+        @angular/common
+        @angular/compiler
+        @angular/platform-browser
+        @angular/platform-browser-dynamic
+    </div>
     <my-app></my-app>
     <script src="app/app.component.js"></script>
     <script src="app/app.module.js"></script>
