--- a/ngc-webpack/src/index.html
+++ b/ngc-webpack/src/index.html
@@ -3,14 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <base href="/">
     <title>Angular 2 AOT Webpack</title>
 </head>
 
 <body>
     <my-app></my-app>
-    <script src="polyfill.bundle.js"></script>
-    <script src="main.bundle.js"></script>
-
 </body>
 
 </html>
